--- a/README
+++ b/README
@@ -28,6 +28,9 @@ Q) Do you have example code showing things working?
 
 A) Yes, see TestActivity and Utils. Tested and working on Android 2.2+.
 
+Q) Will this work for other resource classes (like ObjectInputStream)?
+
+A) I'm sure it will, I just didn't include them. See the implemented InputStreams as a template.
 
 Q) So what works from Java 7?
 
